src/test/deca/syntax/invalid/homemade/semicolon_at_main_end_synt.res
src/test/deca/syntax/invalid/homemade/semicolon_at_main_end.deca:6:1: extraneous input ';' expecting <EOF>
